clusters/eks/fvf/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: fvf-odoo
  labels:
    name: fvf-odoo
