clusters/eks/fvf/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
  namespace: fvf-odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: odoo
            - name: POSTGRES_USER
              value: odoo
          image: postgres:12.7
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: odoo-db-data
      restartPolicy: Always
      volumes:
        - name: odoo-db-data
          persistentVolumeClaim:
            claimName: odoo-db-data
status: {}
