clusters/eks/fvf/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: odoo
  name: odoo
  namespace: fvf-odoo
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: odoo
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: odoo
    spec:
      securityContext:
        fsGroup: 101
      containers:
        - image: awisky/fvf:main-202109090339 # {"$imagepolicy": "flux-system:odoo"}
          name: odoo
          imagePullPolicy: Always
          ports:
            - containerPort: 8069
          volumeMounts:
            - mountPath: /var/lib/odoo
              name: odoo-web-data
      restartPolicy: Always
      volumes:
        - name: odoo-web-data
          persistentVolumeClaim:
            claimName: odoo-web-data
status: {}
